--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
 
 
         <div class="topnav-right gg">
-            <a href="/">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="testimoni.html">Testimoni</a>
             <a href="register.html">Register</a>
