--- a/login.html
+++ b/login.html
@@ -45,7 +45,11 @@
             <tr></tr>
         </table>
 
-        <input type="submit" value="Login">
+        <form action="index.html.html">
+
+            <input type="submit" value="Login">
+
+        </form>
 
 </body>
 
