--- a/login.html
+++ b/login.html
@@ -45,10 +45,8 @@
             <tr></tr>
         </table>
 
-        <form action="index.html.html">
-
+        <form action="index.html">
             <input type="submit" value="Login">
-
         </form>
 
 </body>
