Change Photos and price list

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
             <div>
                 <img src="straw.jpg" alt="Trulli" class="photo-product" />
                 <p>Roti Bakar Strawberry</p>
-                <p>Rp.15.000</p>
+                <p>Rp.59.000</p>
                 <a class="buy-btn" href="roti-bakar-strawberry.html">BUY</a>
             </div>
             <div>
                 <img src="bbq.jpg" alt="Trulli" class="photo-product" />
                 <p>Roti Bakar BBQ</p>
-                <p>Rp.25.000</p>
+                <p>Rp.67.000</p>
                 <a class="buy-btn" href="roti-bakar-bbq.html">BUY</a>
             </div>
             <div>
                 <img src="pizza.jpg" alt="Trulli" class="photo-product" />
                 <p>Roti Bakar Pizza</p>
-                <p>Rp.20.000</p>
+                <p>Rp.57.000</p>
                 <a class="buy-btn" href="pizza.html">BUY</a>
             </div>
         </div>
@@ -57,21 +57,25 @@
         <br />
         <br />
 
+        <h2>Menu Minuman</h2>
         <div class="flex-container">
             <div>
-                <img src="straw.jpg" alt="Trulli" class="photo-product" />
+                <img src="juss.jpg" alt="Trulli" class="photo-product" />
                 <p>Jus Strawberry</p>
-                <a class="buy-btn" href="air-mineral.html">BUY</a>
+                <p>Rp.42.000</p>
+                <a class="buy-btn" href="jus-strawberry.html">BUY</a>
             </div>
             <div>
-                <img src="bbq.jpg" alt="Trulli" class="photo-product" />
+                <img src="teh.jpg" alt="Trulli" class="photo-product" />
                 <p>Es Teh</p>
+                <p>Rp.25.000</p>
                 <a class="buy-btn" href="es-teh.html">BUY</a>
             </div>
             <div>
-                <img src="pizza.jpg" alt="Trulli" class="photo-product" />
+                <img src="putih.jpg" alt="Trulli" class="photo-product" />
                 <p>Air Mineral</p>
-                <a class="buy-btn" href="jus-strawberry.html">BUY</a>
+                <p>Rp.15.000</p>
+                <a class="buy-btn" href="air-mineral.html">BUY</a>
             </div>
         </div>
 
